--- a/web/css/viewPostComponent.css
+++ b/web/css/viewPostComponent.css
@@ -53,7 +53,7 @@
     margin-bottom: -0px;
 }
 #postBodyThirdRowNewPopUP{
-    width: 110px;
+    width: 70px;
     height: 35px;
     float: right;
     margin-top: -0px;
@@ -90,14 +90,39 @@
     margin-left: 1%;
     font-size: 14px;
 }
+
+#noOfLikesLinknewInModal{
+    margin-left: 1%;
+    font-size: 14px;
+}
 #noOfUnLikesLinknew{
     margin-top: 5px;
     margin-left: 170px;
     font-size: 14px;
 }
+
+#noOfUnLikesLinknewInModal{
+    margin-left: 110px;
+    font-size: 14px;
+}
+.commentBoxContainer .postRow{
+    position: absolute;
+    bottom: 0;
+    width: 98%;
+}
+.tooltipInsideModal{
+    margin-top: 5px;
+    margin-left: 10px;
+    font-size: 14px;
+}
 #noOfSharesLinknew{
     margin-top: 5px;
     margin-left:130px;
+    font-size: 14px;
+}
+
+#noOfSharesLinknewInModal{
+    margin-left: 100px;
     font-size: 14px;
 }
 
@@ -212,6 +237,7 @@
     //max-width: 510px;
 }
 .imageContainer div {
+    text-align: center;
     position: absolute;
     background: #ccc;
     border: 5px solid white;
@@ -265,7 +291,6 @@
     padding: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
-    background-color: white;
     -moz-border-radius: 10px;
     -webkit-border-radius: 10px;
     border-radius: 10px; /* future proofing */
